feat: add metadata for contracts and tokens

--- a/frontend/app/.env
+++ b/frontend/app/.env
@@ -1,11 +1,11 @@
 REACT_APP_APP_NAME=CTez
-REACT_APP_CTEZ_CONTRACT=KT1JVJLCqFBvcN8RwBAfQy56UZVw5E4THdjo
-REACT_APP_CFMM_CONTRACT=KT1T9gMqiXsmTXADrwFcruRBYRXCnYsqbM9i
-REACT_APP_CTEZ_FA12_CONTRACT=KT1DKZZbMyFeXmZJT729tWPxN5i1kChX8obw
-REACT_APP_LQT_FA12_CONTRACT=KT1Moyw9naQDXX2oPd7EVh4ckEmwKfKNumwe
-REACT_APP_NETWORK_TYPE=florencenet
-REACT_APP_RPC_URL=https://florencenet.smartpy.io
+REACT_APP_CTEZ_CONTRACT=KT1Xts3DoWaQLenCWSUE2iwFKjSGEmNq6moM
+REACT_APP_CFMM_CONTRACT=KT1XAeXKGM8iu864k4qfytgKY295tFfJKwSV
+REACT_APP_CTEZ_FA12_CONTRACT=KT1Ds15xA5qVVx4tUSfhs5JVuu7xkoZXdvwE
+REACT_APP_LQT_FA12_CONTRACT=KT1CiymRgFoT83KjHDEAGRBss4hKkR9agSY2
+REACT_APP_NETWORK_TYPE=granadanet
+REACT_APP_RPC_URL=https://granadanet.smartpy.io
 REACT_APP_RPC_PORT=443
-REACT_APP_TZKT=https://api.florencenet.tzkt.io
+REACT_APP_TZKT=https://api.granadanet.tzkt.io
 REACT_APP_TZKT_PORT=443
-REACT_APP_CONTRACT_DEPLOYMENT_DATE=2021-05-31
+REACT_APP_CONTRACT_DEPLOYMENT_DATE=2021-09-21
